--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="icon" href="favicon.ico">
     <!--CSS Stylesheets-->
     <!--Bootstrap CSS-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!--HTML5 Boilerplate CSS/Normalize/Main Site CSS-->
     <link rel="stylesheet" href="css/main.css">
     <!--Page Specific Stylesheet-->
@@ -47,37 +48,45 @@
                 </div>
             </div>
             <div class="row pt-4 pb-4">
-                <div class="col-sm-4 home-video">
-                    <div class="embed-responsive embed-responsive-4by3">
-                        <video controls="controls" poster="img/video_poster.jpg">
-                            <source src="vid/updatedintrovideo.ogg">
-                            <source src="vid/updatedintrovideo.webm">
-                            <source src="vid/updatedintrovideo.mp4"> 
-                            You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.
-                        </video>
-                    </div>
+                <div class="col-sm-4 base-picture">
+                    <img src="img/base-image.jpg" alt="Home Page image of Jackson Porter (JP)" class="img-thumbnail">
                 </div>
                 <div class="col-sm-8 text-center">
                     <p>
-                        My name is Jackson Porter, but lots of people call me JP. Feel free to browse around or <a href="./contact.html">contact me</a> at any time.
+                        My name is Jackson Porter, but lots of people call me JP.
+                    </p>
+                    <p>
+                        I am a Software Engineer in DevOps/Backend solving problems through software.
+                    </p>
+                    <p>
+                        Feel free to browse around or <a href="./contact.html">contact me</a> at any time.
                     </p>
                     <div class="row text-center pb-1 pt-1">
                         <div class="col-sm-12 social-box">
                             <h3 class="social-header">Personal</h3>
-                            <a href="https://www.facebook.com/jacksonporterjp"><img class="img-fluid" src="img/facebook-logo.png" alt="Facebook Logo - Personal Link" /></a>
-                            <a href="https://m.me/jacksonporterjp"><img class="img-fluid" src="img/messenger-logo.png" alt="Facebook Messenger Logo - Personal Link" /></a>
-                            <a href="https://instagram.com/jacksonporterjp"><img class="img-fluid" src="img/instagram-logo.png" alt="Instagram Logo - Personal Link" /></a>
-                            <a href="https://twitter.com/jacksonporterjp"><img class="img-fluid" src="img/twitter-logo.png" alt="Twitter Logo - Personal Link" /></a>
-                            <a href="https://linkedin.com/in/jacksonporterjp"><img class="img-fluid logo" src="img/linked-in-logo.png" alt="LinkedIn Logo - Personal Link" /></a>
-                            <a href="https://github.com/jacksonporter"><img class="img-fluid" src="img/github-logo.png" alt="Github Logo - Personal Link" /></a>
+                            <a href="https://www.facebook.com/jacksonporterjp"><img class="img-fluid"
+                                    src="img/facebook-logo.png" alt="Facebook Logo - Personal Link" /></a>
+                            <a href="https://m.me/jacksonporterjp"><img class="img-fluid" src="img/messenger-logo.png"
+                                    alt="Facebook Messenger Logo - Personal Link" /></a>
+                            <a href="https://instagram.com/jacksonporterjp"><img class="img-fluid"
+                                    src="img/instagram-logo.png" alt="Instagram Logo - Personal Link" /></a>
+                            <a href="https://twitter.com/jacksonporterjp"><img class="img-fluid"
+                                    src="img/twitter-logo.png" alt="Twitter Logo - Personal Link" /></a>
+                            <a href="https://linkedin.com/in/jacksonporterjp"><img class="img-fluid logo"
+                                    src="img/linked-in-logo.png" alt="LinkedIn Logo - Personal Link" /></a>
+                            <a href="https://github.com/jacksonporter"><img class="img-fluid" src="img/github-logo.png"
+                                    alt="Github Logo - Personal Link" /></a>
                         </div>
                     </div>
                     <div class="row text-center pb-1 pt-1">
                         <div class="col-sm-12 social-box">
                             <h3 class="social-header">Music</h3>
-                            <a href="https://www.facebook.com/jacksonportermusic"><img class="img-fluid" src="img/facebook-logo.png" alt="Facebook Logo - Music Link" /></a>
-                            <a href="https://instagram.com/jp_on_the_track"><img class="img-fluid" src="img/instagram-logo.png" alt="Instagram Logo - Music Link" /></a>
-                            <a href="https://soundcloud.com/jacksonporterjp"><img class="img-fluid" src="img/soundcloud-logo.png" alt="SoundCloud Logo - Music Link" /></a>
+                            <a href="https://www.facebook.com/jacksonportermusic"><img class="img-fluid"
+                                    src="img/facebook-logo.png" alt="Facebook Logo - Music Link" /></a>
+                            <a href="https://instagram.com/jp_on_the_track"><img class="img-fluid"
+                                    src="img/instagram-logo.png" alt="Instagram Logo - Music Link" /></a>
+                            <a href="https://soundcloud.com/jacksonporterjp"><img class="img-fluid"
+                                    src="img/soundcloud-logo.png" alt="SoundCloud Logo - Music Link" /></a>
                         </div>
                     </div>
                 </div>
@@ -85,17 +94,26 @@
             <div class="row text-center">
                 <div class="col-sm-12">
                     <p>
-                        I am a highly skilled software developer with knowledge of <a href="https://www.java.com">Java</a>, <a href="https://docs.microsoft.com/en-us/dotnet/csharp/">C#</a>, <a href="https://www.python.org">Python</a>, <a href="https://www.gnu.org/software/bash/">Bash Shell Scripting</a>,
-                        <a href="https://www.microsoft.com/en-us/sql-server/default.aspx">Microsoft SQL</a> and more.
+                        I am a skilled software developer with knowledge of <a href="https://www.python.org">Python</a>,
+                        <a href="https://www.gnu.org/software/bash/">Bash Shell Scripting</a>, <a
+                            href="https://www.terraform.io/">Terraform</a>, <a
+                            href="https://github.com/gruntwork-io/terragrunt">Terragrunt</a>, <a
+                            href="https://www.java.com">Java</a>, <a
+                            href="https://docs.microsoft.com/en-us/dotnet/csharp/">C#</a>, <a
+                            href="https://www.microsoft.com/en-us/sql-server/default.aspx">Microsoft SQL</a> and more.
                     </p>
                     <p>
-                        I have an associate's degree in Arts and Science both majoring in Computer Science. I am finishing my Bachelor's Degree in Software Engineering expecting to graduate September 2019. All degrees were worked through <a href="https://www.snow.edu">Snow College</a>.
+                        I have a earned 3 academic degress through <a href="https://www.snow.edu">Snow College</a>.
+                        Those degrees include: Bachelor's of Science in Software Engineering as well as two Associate
+                        Degrees of Arts and Science majoring in Computer Science.
                     </p>
                     <p>
-                        I currently work with <a href="https://ban.jo/">Banjo Inc.</a> as a Software Engineer in back-end development to assist in reducing human suffering.
+                        I am currently seeking new career opportunities in DevOps/Software Engineering. I love to solve
+                        problems with software as well as work with software to make it operationally stable with sound
+                        infrastructure and development piplines.
                     </p>
                     <p>
-                        You can catch me developing, running, hiking, recording music and driving around town.
+                        You can catch me developing, running, hiking, recording music and driving around the mountains!
                     </p>
                 </div>
             </div>
@@ -103,28 +121,36 @@
     </article>
     <footer>
         <div class="container text-white text-center">
-            <hr/>
+            <hr />
             <div class="row">
                 <div class="col-sm-12">
                     <p>Built with
-                        <a href="https://code.visualstudio.com/"><img class="img-fluid logo" src="img/vs-code-logo.png" alt="Visual Studio Code Logo - Website Link" /></a> using
-                        <a href="https://getbootstrap.com/"><img src="https://upload.wikimedia.org/wikipedia/commons/e/ea/Boostrap_logo.svg" class="img-fluid logo" alt="Bootstrap Logo - Website Link" /></a>
+                        <a href="https://code.visualstudio.com/"><img class="img-fluid logo" src="img/vs-code-logo.png"
+                                alt="Visual Studio Code Logo - Website Link" /></a> using
+                        <a href="https://getbootstrap.com/"><img
+                                src="https://upload.wikimedia.org/wikipedia/commons/b/b2/Bootstrap_logo.svg"
+                                class="img-fluid logo" alt="Bootstrap Logo - Website Link" /></a>
                         <a class="boilerplate" href="https://html5boilerplate.com/">&#9733;</a>
-                        <a href="https://formspree.io"><img class="img-fluid logo" src="https://formspree.io/img/formspree-logo-mark.png" alt="Formspree Logo - Website Link" /></a>
+                        <a href="https://formspree.io"><img class="img-fluid logo"
+                                src="https://formspree.io/img/formspree-logo-mark.png"
+                                alt="Formspree Logo - Website Link" /></a>
                     </p>
-                    <img class="img-fluid" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="W3C CSS Verified Icon" />
+                    <img class="img-fluid" src="http://jigsaw.w3.org/css-validator/images/vcss"
+                        alt="W3C CSS Verified Icon" />
                     <p class="text-white">
                         All image rights go to their respective holders.
                     </p>
                     <p>
-                        &copy; Jackson Porter 2019
+                        &copy; Jackson Porter 2020
                     </p>
                 </div>
             </div>
         </div>
     </footer>
 
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
