--- a/resumé.html
+++ b/resumé.html
@@ -10,7 +10,8 @@
     <link rel="icon" href="favicon.ico">
     <!--CSS Stylesheets-->
     <!--Bootstrap CSS-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!--HTML5 Boilerplate CSS/Normalize/Main Site CSS-->
     <link rel="stylesheet" href="css/main.css">
     <!--Page Specific Stylesheet-->
@@ -45,14 +46,17 @@
                 <div class="col-sm-12 text-center text-white">
                     <h2>Jackson Porter (JP)</h2>
                 </div>
-                <img class="img-fluid rounded mx-auto main_image" src="img/jackson-snow-image.jpg" alt="Image of Jackson Porter (JP)">
+                <img class="img-fluid rounded mx-auto main_image" src="img/resumé-image.jpg"
+                    alt="Image of Jackson Porter (JP)">
                 <img class="img-fluid logo" src="img/printer.png" alt="Print icon" onclick="window.print()">
             </div>
             <div class="row pt-5 pb-4">
                 <div class="col-sm-12 text-center">
                     <h2 class="text-white">Summary</h2>
-                    <p>Experienced worker with skills in customer service, team building/cooperation and management. Efficient employee with hard work ethic and experienced problem solving skills. Skilled in software and IT knowledge with a passion for helping
-                        others.
+                    <p>Software/DevOps Engineer with a passion for solving problems with technology. Strong ownership
+                        and passion.
+                        Dedicated to tasks at hand and the team. Experienced in application/infrastructure design and
+                        development.
                     </p>
                 </div>
             </div>
@@ -88,13 +92,7 @@
                             <td>Bachelor of Science (Software Engineering)</td>
                             <td><a href="https://snow.edu">Snow College</a></td>
                             <td>Ephraim, UT</td>
-                            <td>Fall 2015 - <em>Finalizing Now</em></td>
-                        </tr>
-                        <tr>
-                            <td>Certified Cloud Practitioner</td>
-                            <td><a href="https://aws.amazon.com/training/">AWS Training and Certification</a></td>
-                            <td>N/A</td>
-                            <td>Valid: April 2018 - April 2020</td>
+                            <td>Fall 2015 - Fall 2019</td>
                         </tr>
                     </tbody>
                 </table>
@@ -109,36 +107,30 @@
                     <thead class="thead-dark">
                         <tr>
                             <th scope="col">Technical/Programming</th>
-                            <th scope="col">Other</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
                             <td>
                                 <ul>
-                                    <li>Java</li>
                                     <li>Python</li>
-                                    <li>Git</li>
-                                    <li>Bash Scripting</li>
-                                    <li>Microsoft SQL</li>
+                                    <li>Shell (Bash) Scripting</li>
+                                    <li>Terraform</li>
+                                    <li>Terragrunt</li>
+                                    <li>Java</li>
+                                    <li>REST APIs</li>
+                                    <li>AWS (IAM, Networking, Lambda, ECS)</li>
+                                    <li>Aviatrix VPN</li>
+                                    <li>SQL</li>
+                                    <li>Apache Kafka</li>
+                                    <li>Git/GitHub</li>
+                                    <li>GitHub Actions/Drone/CircleCI</li>
+                                    <li>macOS/Linux</li>
                                     <li>C#</li>
-                                    <li>C++</li>
-                                    <li>Multithreaded Programming</li>
-                                    <li>Networking/Sockets</li>
-                                    <li>Kafka</li>
-                                </ul>
-                            </td>
-                            <td>
-                                <ul>
-                                    <li>Speaks Spanish</li>
-                                    <li>Microsoft Office</li>
-                                    <li>G Suite</li>
-                                    <li>Fast/Accurate Typer</li>
-                                    <li>Problem Solver</li>
-                                    <li>Quick Learner</li>
-                                    <li>Team Leader</li>
-                                    <li>Hard Worker</li>
-                                    <li>Sees Broad-Vision Solutions</li>
+                                    <li>Docker</li>
+                                    <li>Kubernetes</li>
+                                    <li>Drone/CircleCI</li>
+                                    <li>Apache Pulsar</li>
                                 </ul>
                             </td>
                         </tr>
@@ -163,95 +155,120 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>Software Engineer</td>
-                            <td><a href="https://ban.jo">Banjo Inc.</a></td>
-                            <td>Salt Lake City, UT (Previously Park City, UT)</td>
-                            <td>Backend Developer with focus in Python and Java development. Works with a team of indivudals on designing platform and connections.</td>
-                            <td>May 2019 - Current</td>
+                            <td>DevOps Engineer</td>
+                            <td><a href="https://safex.ai">safeXAi</a></td>
+                            <td>Remote</td>
+                            <td>Built and managed cloud infrastructure via Terraform in AWS. Managed VCS (Version
+                                Control System) [GitHub]. Researched and provided implementations of CI pipelines.
+                                Worked with external vendors and internal teams to provide an optimal experience for
+                                engineering development.</td>
+                            <td>2020</td>
                         </tr>
                         <tr>
-                            <td>Mentor</td>
+                            <td>Software Engineer</td>
+                            <td><a href="https://safex.ai">safeXai</a> (formally <a href="https://ban.jo">Banjo</a>)
+                            </td>
+                            <td>Remote</td>
+                            <td>Built and designed microservices to connect with external APIs. Managed operations
+                                following deployment. Worked primarily in Python/Docker/Kubernetes. Worked with teams
+                                and project managers to coordinate releases and tackle needs.</td>
+                            <td>2019-2020</td>
+                        </tr>
+                        <tr>
+                            <td>Shift Supervisor Mentor, Teacher</td>
                             <td><a href="https://oxbowacademy.net">Oxbow Academy</a></td>
                             <td>Wales/Mount Pleasant, UT</td>
-                            <td>Works in a treatment facility for boys, helps with daily tasks and activites as well as residential and academic tasks.</td>
-                            <td>July 2018 - Current</td>
+                            <td>Managed staff and residents during daily residential, therapeutic and academic
+                                endeavors.</td>
+                            <td>2018-2020</td>
                         </tr>
                         <tr>
                             <td>Owner/Operator</td>
                             <td>Valley Computer Tech</td>
                             <td>Ephraim, UT (Sanpete County)</td>
-                            <td>Owns a IT business to help people with basic computer problems and helps find and make solutions.</td>
-                            <td>May 2017 - Closed</td>
+                            <td>Operated my own business fixing basic computer and other device issues.</td>
+                            <td>2017-2018</td>
                         </tr>
                         <tr>
                             <td>Head Host/Staff</td>
                             <td><a href="https://snow.edu/snowfun">Snow College (Snow Fun)</a></td>
                             <td>Ephraim, UT</td>
-                            <td>Worked as a general employee and group host for youth groups who came to Snow College for conferences.</td>
-                            <td>May 2017 - October 2018</td>
+                            <td>Worked as a general employee and group host lead for youth conferences.</td>
+                            <td>2017-2018</td>
                         </tr>
                         <tr>
                             <td>Resident Assistant</td>
                             <td><a href="https://www.snow.edu/housing">Snow College (Residence Life)</a></td>
                             <td>Ephraim, UT</td>
-                            <td>Lives inside the on-campus residence halls at Snow College providing programming and assistance to residents.</td>
-                            <td>August 2017 - April 2018</td>
+                            <td>Lived inside the on-campus residence halls at Snow College providing programming and
+                                assistance to residents.</td>
+                            <td>2017-2018</td>
                         </tr>
                         <tr>
                             <td>Teacher's Assistant</td>
                             <td><a href="https://snow.edu">Snow College (Engineering/Phyiscs)</a></td>
                             <td>Ephraim, UT</td>
-                            <td>Graded assignments and provided assistance to Computer Science and Physics students.</td>
-                            <td>August 2016 - December 2018 (not consecutive)</td>
+                            <td>Graded assignments and provided assistance to students.</td>
+                            <td>2016-2018</td>
                         </tr>
                         <tr>
                             <td>IT Helpdesk</td>
                             <td><a href="https://snow.edu/it">Snow College (Information Technology)</a></td>
                             <td>Ephraim, UT</td>
                             <td>Provided basic technical assistance to faculty and students of Snow College.</td>
-                            <td>May 2019 - Current</td>
+                            <td>2016</td>
                         </tr>
                         <tr>
                             <td>Assistant Manager</td>
                             <td><a href="http://jcws.com/">JCW'S LLC</a></td>
                             <td>South Jordan, UT</td>
-                            <td>Lead and worked on a kitchen team and provided customer service to those dining at the restaurant.</td>
-                            <td>October 2014 - August 2016 (not consecutive)</td>
+                            <td>Lead and worked on a kitchen team and provided customer service.</td>
+                            <td>2014-2016</td>
                         </tr>
                     </tbody>
                 </table>
             </div>
             <div class="row">
                 <div class="col-sm-12 text-center">
-                    <p>You can contact Jackson by emailing <a href="mailto:contact@jacksonporterjp.com">contact@jacksonporterjp.com</a> or visiting the <a href="contact.html">contact page.</a></p>
+                    <p>You can contact Jackson by emailing <a
+                            href="mailto:contact@jacksonporterjp.com">contact@jacksonporterjp.com</a> or visiting the <a
+                            href="contact.html">contact page.</a></p>
                 </div>
             </div>
         </div>
     </article>
     <footer>
         <div class="container text-white text-center">
-            <hr/>
+            <hr />
             <div class="row">
                 <div class="col-sm-12">
                     <p>Built with
-                        <a href="https://code.visualstudio.com/"><img class="img-fluid logo" src="img/vs-code-logo.png" alt="Visual Studio Code Logo - Website Link" /></a> using
-                        <a href="https://getbootstrap.com/"><img src="https://upload.wikimedia.org/wikipedia/commons/e/ea/Boostrap_logo.svg" class="img-fluid logo" alt="Bootstrap Logo - Website Link" /></a>
+                        <a href="https://code.visualstudio.com/"><img class="img-fluid logo" src="img/vs-code-logo.png"
+                                alt="Visual Studio Code Logo - Website Link" /></a> using
+                        <a href="https://getbootstrap.com/"><img
+                                src="https://upload.wikimedia.org/wikipedia/commons/b/b2/Bootstrap_logo.svg"
+                                class="img-fluid logo" alt="Bootstrap Logo - Website Link" /></a>
                         <a class="boilerplate" href="https://html5boilerplate.com/">&#9733;</a>
-                        <a href="https://formspree.io"><img class="img-fluid logo" src="https://formspree.io/img/formspree-logo-mark.png" alt="Formspree Logo - Website Link" /></a>
+                        <a href="https://formspree.io"><img class="img-fluid logo"
+                                src="https://formspree.io/img/formspree-logo-mark.png"
+                                alt="Formspree Logo - Website Link" /></a>
                     </p>
-                    <img class="img-fluid" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="W3C CSS Verified Icon" />
+                    <img class="img-fluid" src="http://jigsaw.w3.org/css-validator/images/vcss"
+                        alt="W3C CSS Verified Icon" />
                     <p class="text-white">
                         All image rights go to their respective holders.
                     </p>
                     <p>
-                        &copy; Jackson Porter 2019
+                        &copy; Jackson Porter 2020
                     </p>
                 </div>
             </div>
         </div>
     </footer>
 
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
