--- a/resumé.html
+++ b/resumé.html
@@ -175,7 +175,7 @@
                             <td>2019-2020</td>
                         </tr>
                         <tr>
-                            <td>Shift Supervisor Mentor, Teacher</td>
+                            <td>Shift Supervisor, Youth Mentor, Teacher</td>
                             <td><a href="https://oxbowacademy.net">Oxbow Academy</a></td>
                             <td>Wales/Mount Pleasant, UT</td>
                             <td>Managed staff and residents during daily residential, therapeutic and academic
