--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,8 @@
     <link rel="icon" href="favicon.ico">
     <!--CSS Stylesheets-->
     <!--Bootstrap CSS-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!--HTML5 Boilerplate CSS/Normalize/Main Site CSS-->
     <link rel="stylesheet" href="css/main.css">
     <!--Page Specific Stylesheet-->
@@ -48,39 +49,52 @@
             </div>
             <div class="row pt-4">
                 <div class="col-sm-12 text-center">
-                    <p>Please feel free to contact me via email using the form below or social links listed below:</p><br/>
+                    <p>Please feel free to contact me via email using the form below or social links listed below:</p>
+                    <br />
                 </div>
             </div>
             <div class="row text-center pb-1 pt-1">
                 <div class="col-sm-12 social-box">
                     <h3 class="social-header">Personal</h3>
-                    <a href="https://www.facebook.com/jacksonporterjp"><img class="img-fluid" src="img/facebook-logo.png" alt="Facebook Logo - Personal Link" /></a>
-                    <a href="https://m.me/jacksonporterjp"><img class="img-fluid" src="img/messenger-logo.png" alt="Facebook Messenger Logo - Personal Link" /></a>
-                    <a href="https://instagram.com/jacksonporterjp"><img class="img-fluid" src="img/instagram-logo.png" alt="Instagram Logo - Personal Link" /></a>
-                    <a href="https://twitter.com/jacksonporterjp"><img class="img-fluid" src="img/twitter-logo.png" alt="Twitter Logo - Personal Link" /></a>
-                    <a href="https://linkedin.com/in/jacksonporterjp"><img class="img-fluid logo" src="img/linked-in-logo.png" alt="LinkedIn Logo - Personal Link" /></a>
-                    <a href="https://github.com/jacksonporter"><img class="img-fluid" src="img/github-logo.png" alt="Github Logo - Personal Link" /></a>
+                    <a href="https://www.facebook.com/jacksonporterjp"><img class="img-fluid"
+                            src="img/facebook-logo.png" alt="Facebook Logo - Personal Link" /></a>
+                    <a href="https://m.me/jacksonporterjp"><img class="img-fluid" src="img/messenger-logo.png"
+                            alt="Facebook Messenger Logo - Personal Link" /></a>
+                    <a href="https://instagram.com/jacksonporterjp"><img class="img-fluid" src="img/instagram-logo.png"
+                            alt="Instagram Logo - Personal Link" /></a>
+                    <a href="https://twitter.com/jacksonporterjp"><img class="img-fluid" src="img/twitter-logo.png"
+                            alt="Twitter Logo - Personal Link" /></a>
+                    <a href="https://linkedin.com/in/jacksonporterjp"><img class="img-fluid logo"
+                            src="img/linked-in-logo.png" alt="LinkedIn Logo - Personal Link" /></a>
+                    <a href="https://github.com/jacksonporter"><img class="img-fluid" src="img/github-logo.png"
+                            alt="Github Logo - Personal Link" /></a>
                 </div>
             </div>
             <div class="row text-center pb-4 pt-1">
                 <div class="col-sm-12 social-box">
                     <h3 class="social-header">Music</h3>
-                    <a href="https://www.facebook.com/jacksonportermusic"><img class="img-fluid" src="img/facebook-logo.png" alt="Facebook Logo - Music Link" /></a>
-                    <a href="https://instagram.com/jp_on_the_track"><img class="img-fluid" src="img/instagram-logo.png" alt="Instagram Logo - Music Link" /></a>
-                    <a href="https://soundcloud.com/jacksonporterjp"><img class="img-fluid" src="img/soundcloud-logo.png" alt="SoundCloud Logo - Music Link" /></a>
+                    <a href="https://www.facebook.com/jacksonportermusic"><img class="img-fluid"
+                            src="img/facebook-logo.png" alt="Facebook Logo - Music Link" /></a>
+                    <a href="https://instagram.com/jp_on_the_track"><img class="img-fluid" src="img/instagram-logo.png"
+                            alt="Instagram Logo - Music Link" /></a>
+                    <a href="https://soundcloud.com/jacksonporterjp"><img class="img-fluid"
+                            src="img/soundcloud-logo.png" alt="SoundCloud Logo - Music Link" /></a>
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-8">
                     <form action="https://formspree.io/contact@jacksonporterjp.com" method="POST">
                         <div class="form-group">
-                            <label for="name">Full Name:</label><br><input class="form-control" type="text" id="name" name="name">
+                            <label for="name">Full Name:</label><br><input class="form-control" type="text" id="name"
+                                name="name">
                         </div>
                         <div class="form-group">
-                            <label for="email">Email Address:</label><br><input class="form-control" type="email" id="email" name="email">
+                            <label for="email">Email Address:</label><br><input class="form-control" type="email"
+                                id="email" name="email">
                         </div>
                         <div class="form-group">
-                            <label for="message">Message:</label><br><textarea class="form-control" id="message" name="message"></textarea>
+                            <label for="message">Message:</label><br><textarea class="form-control" id="message"
+                                name="message"></textarea>
                         </div>
                         <input class="logo" type="image" src="img/send-email.jpg" alt="Send email button">
                         <small>This cannot be done if you're viewing this page as a HTML locally.</small>
@@ -94,16 +108,22 @@
     </article>
     <footer>
         <div class="container text-white text-center">
-            <hr/>
+            <hr />
             <div class="row">
                 <div class="col-sm-12">
                     <p>Built with
-                        <a href="https://code.visualstudio.com/"><img class="img-fluid logo" src="img/vs-code-logo.png" alt="Visual Studio Code Logo - Website Link" /></a> using
-                        <a href="https://getbootstrap.com/"><img src="https://upload.wikimedia.org/wikipedia/commons/b/b2/Bootstrap_logo.svg" class="img-fluid logo" alt="Bootstrap Logo - Website Link" /></a>
+                        <a href="https://code.visualstudio.com/"><img class="img-fluid logo" src="img/vs-code-logo.png"
+                                alt="Visual Studio Code Logo - Website Link" /></a> using
+                        <a href="https://getbootstrap.com/"><img
+                                src="https://upload.wikimedia.org/wikipedia/commons/b/b2/Bootstrap_logo.svg"
+                                class="img-fluid logo" alt="Bootstrap Logo - Website Link" /></a>
                         <a class="boilerplate" href="https://html5boilerplate.com/">&#9733;</a>
-                        <a href="https://formspree.io"><img class="img-fluid logo" src="https://formspree.io/img/formspree-logo-mark.png" alt="Formspree Logo - Website Link" /></a>
+                        <a href="https://formspree.io"><img class="img-fluid logo"
+                                src="https://formspree.io/img/formspree-logo-mark.png"
+                                alt="Formspree Logo - Website Link" /></a>
                     </p>
-                    <img class="img-fluid" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="W3C CSS Verified Icon" />
+                    <img class="img-fluid" src="http://jigsaw.w3.org/css-validator/images/vcss"
+                        alt="W3C CSS Verified Icon" />
                     <p class="text-white">
                         All image rights go to their respective holders.
                     </p>
@@ -115,7 +135,9 @@
         </div>
     </footer>
 
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
