adding resume to front page text as menu bar isn't working

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         I am a Software Engineer in DevOps/Backend solving problems through software.
                     </p>
                     <p>
-                        Feel free to browse around or <a href="./contact.html">contact me</a> at any time.
+                        Feel free to browse around, view my <a href="./resumé.html">resumé</a> or <a href="./contact.html">contact me</a> at any time.
                     </p>
                     <div class="row text-center pb-1 pt-1">
                         <div class="col-sm-12 social-box">
